--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -29,7 +29,7 @@
 				</div>
 				<input type="text" class="inputsearch">
 				<span class="searchexecute">
-					<img src="/img/searchico.png" alt="searchico" class="searchexecute_ico">
+					<img src="./img/searchico.png" alt="searchico" class="searchexecute_ico">
 				</span>
 			</div>
 			<div class="img">
@@ -40,7 +40,7 @@
 		</div>
 		<div class="nav-bottom">
 			<div class="location">
-				<img src="/img/loacationico.png" alt="location" class="locationico">
+				<img src="./img/loacationico.png" alt="location" class="locationico">
 				<div class="location-line">
 					<span class="location-line1">Deliver to</span>
 					<span class="location-line2">Korea, Republic of</span>
@@ -75,7 +75,7 @@
 				<span class="usertools-prime">Try Prime</span>
 				<span class="usertools-cart">
 					<span class="usertools-cart-count">0</span>
-					<img src="/img/cartico.png" alt="cartimg" class="usertools-cart-ico">
+					<img src="./img/cartico.png" alt="cartimg" class="usertools-cart-ico">
 					<span class="usertools-cart-txt">Cart</span>
 				</span>
 			</div>
