--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -94,7 +94,7 @@
 				<p>After your free trial Prime is just $12.99/month. Cancel anytime.
 					See more plans</p>
 				<img src="./img/PrimeLogoWhite.png" alt="PrimeLogoWhite" class="prime-logo">
-				<img src="/img/datail01png.png" alt="" class="prime-background">
+				<img src="./img/datail01png.png" alt="" class="prime-background">
 			</div>
 			<div class="datailcarousel">
 				<div class="carousel-shipcard">
