--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -12,7 +12,7 @@
     <header class="navbar">
       <div class="nav-top">
         <div class="logo">
-          <a href="./main.html">
+          <a href="./index.html">
             <img src="./img/logo.png" alt="AmazonLogo" class="logo-img" />
           </a>
           <a href="" class="logo-primeLink">Try Prime</a>
@@ -38,7 +38,7 @@
           </span>
         </div>
         <div class="evnetimg">
-          <a href="./main.html">
+          <a href="./index.html">
             <img src="./img/eventimg.jpg" alt="eventimg" class="eventimg" />
           </a>
         </div>
@@ -60,14 +60,14 @@
             Departments <span class="menu-arrow"></span>
           </div>
           <span class="menu-list">
-            <a href="./main.html" class="menu-link">Your Amazon.com</a>
-            <a href="./main.html" class="menu-link">Today's Deals</a>
-            <a href="./main.html" class="menu-link">Gift Cards</a>
-            <a href="./main.html" class="menu-link">Registry</a>
-            <a href="./main.html" class="menu-link">Sell</a>
-            <a href="./main.html" class="menu-link">Treasure</a>
-            <a href="./main.html" class="menu-link">Truck</a>
-            <a href="./main.html" class="menu-link">Help</a>
+            <a href="./index.html" class="menu-link">Your Amazon.com</a>
+            <a href="./index.html" class="menu-link">Today's Deals</a>
+            <a href="./index.html" class="menu-link">Gift Cards</a>
+            <a href="./index.html" class="menu-link">Registry</a>
+            <a href="./index.html" class="menu-link">Sell</a>
+            <a href="./index.html" class="menu-link">Treasure</a>
+            <a href="./index.html" class="menu-link">Truck</a>
+            <a href="./index.html" class="menu-link">Help</a>
           </span>
         </div>
         <div class="usertools">
@@ -90,10 +90,10 @@
             </div>
           </div>
           <span class="usertools-orders">
-            <a href="./main.html" class="usertools-orders-link">Orders</a>
+            <a href="./index.html" class="usertools-orders-link">Orders</a>
           </span>
           <span class="usertools-prime">
-            <a href="./main.html" class="usertools-orders-link">
+            <a href="./index.html" class="usertools-orders-link">
               Try Prime <span class="usertools-orders-arrow"></span>
             </a>
           </span>
