--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Amazon.com: Amazon Prime</title>
-    <link rel="stylesheet" type="text/css" href="./main.css" />
-  </head>
 
-  <body>
-    <header class="navbar">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Amazon.com: Amazon Prime</title>
+  <link rel="stylesheet" type="text/css" href="./main.css" />
+</head>
+
+<body>
+  <header class="navbar">
+    <div class="nav-wrap">
       <div class="nav-top">
         <div class="logo">
-          <a href="./index.html">
+          <a href="./main.html">
             <img src="./img/logo.png" alt="AmazonLogo" class="logo-img" />
           </a>
           <a href="" class="logo-primeLink">Try Prime</a>
@@ -29,59 +31,47 @@
             </select>
           </div>
           <input type="text" class="inputsearch" />
-          <span class="searchexecute">
-            <img
-              src="./img/searchico.png"
-              alt="searchico"
-              class="searchexecute_ico"
-            />
-          </span>
+          <div class="searchexecute">
+            <img src="./img/searchico.png" alt="searchico" class="searchexecute_ico" />
+          </div>
         </div>
         <div class="evnetimg">
-          <a href="./index.html">
+          <a href="./main.html">
             <img src="./img/eventimg.jpg" alt="eventimg" class="eventimg" />
           </a>
         </div>
       </div>
       <div class="nav-bottom">
         <div class="location">
-          <img
-            src="./img/loacationico.png"
-            alt="location"
-            class="location-ico"
-          />
+          <img src="./img/loacationico.png" alt="location" class="location-ico" />
           <div class="location-line">
             <span class="location-line1">Deliver to</span>
             <span class="location-line2">Korea, Republic of</span>
           </div>
         </div>
         <div class="menu">
-          <div class="hamberger-menu">
+          <div class="hamburger-menu">
             Departments <span class="menu-arrow"></span>
           </div>
           <span class="menu-list">
-            <a href="./index.html" class="menu-link">Your Amazon.com</a>
-            <a href="./index.html" class="menu-link">Today's Deals</a>
-            <a href="./index.html" class="menu-link">Gift Cards</a>
-            <a href="./index.html" class="menu-link">Registry</a>
-            <a href="./index.html" class="menu-link">Sell</a>
-            <a href="./index.html" class="menu-link">Treasure</a>
-            <a href="./index.html" class="menu-link">Truck</a>
-            <a href="./index.html" class="menu-link">Help</a>
+            <a href="./main.html" class="menu-link">Your Amazon.com</a>
+            <a href="./main.html" class="menu-link">Today's Deals</a>
+            <a href="./main.html" class="menu-link">Gift Cards</a>
+            <a href="./main.html" class="menu-link">Registry</a>
+            <a href="./main.html" class="menu-link">Sell</a>
+            <a href="./main.html" class="menu-link">Treasure</a>
+            <a href="./main.html" class="menu-link">Truck</a>
+            <a href="./main.html" class="menu-link">Help</a>
           </span>
         </div>
         <div class="usertools">
-          <span class="usertools-leng">
+          <div class="usertools-leng">
             <div class="usertools-leng-satus">
               <span class="usertools-leng-txt">EN</span>
-              <img
-                src="./img/langico.png"
-                alt="lang-selector"
-                class="usertools-leng-ico"
-              />
+              <img src="./img/langico.png" alt="lang-selector" class="usertools-leng-ico" />
             </div>
             <span class="usertools-leng-arrow"></span>
-          </span>
+          </div>
           <span class="usertools-border"></span>
           <div class="usertools-login">
             <div class="usertools-login-text">Hello. Sign</div>
@@ -90,97 +80,106 @@
             </div>
           </div>
           <span class="usertools-orders">
-            <a href="./index.html" class="usertools-orders-link">Orders</a>
+            <a href="./main.html" class="usertools-orders-link">Orders</a>
           </span>
           <span class="usertools-prime">
-            <a href="./index.html" class="usertools-orders-link">
+            <a href="./main.html" class="usertools-orders-link">
               Try Prime <span class="usertools-orders-arrow"></span>
             </a>
           </span>
-          <span class="usertools-cart">
+          <div class="usertools-cart">
             <span class="usertools-cart-count">0</span>
             <div class="usertools-cart-contents">
-              <img
-                src="./img/cartico.png"
-                alt="cartimg"
-                class="usertools-cart-ico"
-              />
+              <img src="./img/cartico.png" alt="cartimg" class="usertools-cart-ico" />
               <span class="usertools-cart-txt">Cart</span>
-            </div>
-          </span>
-        </div>
-      </div>
-    </header>
-    <div class="detailpage">
-      <div class="prime-detailcontainer">
-        <div class="prime-text">
-          <p>
-            There's something for everyone with Prime! Check out what's included
-            with your Prime membership.
-          </p>
-          <div class="prime-btn">
-            <button>TRY PRIME</button> <button>prime monthly</button>
-            <button>prime annual</button>
-          </div>
-          <p>
-            After your free trial Prime is just $12.99/month. Cancel anytime.
-            See more plans
-          </p>
-          <img
-            src="./img/PrimeLogoWhite.png"
-            alt="PrimeLogoWhite"
-            class="prime-logo"
-          />
-          <img src="./img/datail01png.png" alt="" class="prime-background" />
-        </div>
-        <div class="datailcarousel">
-          <div class="carousel-shipcard">
-            <img src="./img/boximg.png" alt="" class="shipcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-streamcard">
-            <img src="./img/notebookimg.png" alt="" class="streamcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-shopcard">
-            <img src="./img/bagimg.png" alt="" class="shopcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-readcard">
-            <img src="./img/tabletimg.png" alt="" class="readcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-morecard">
-            <img src="./img/sizagaimg.png" alt="" class="morecardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </header>
+  <div class="planpage">
+    <div class="planpage-contents">
+      <div class="planpage-contents-logo">
+        <img src="./img/primeLogoBlue.png" alt="primeLogoBlue" class="primeblue" />
+      </div>
+      <div class="planpage-contents-txt">
+        See more plans
+        <img src="./img/NavDownArrow.png" alt="DownArrow" class="downarrow" />
+      </div>
+      <div class="planpage-contents-btn">
+        <button class="contents-btn">TRY PRIME</button>
+      </div>
+    </div>
+  </div>
+  <div class="detailpage">
+    <div class="prime-detailcontainer">
+      <div class="prime-text">
+        <p>
+          There's something for everyone with Prime! Check out what's included
+          with your Prime membership.
+        </p>
+        <div class="prime-btn">
+          <button>TRY PRIME</button> <button>prime monthly</button>
+          <button>prime annual</button>
+        </div>
+        <p>
+          After your free trial Prime is just $12.99/month. Cancel anytime.
+          See more plans
+        </p>
+        <img src="./img/PrimeLogoWhite.png" alt="PrimeLogoWhite" class="prime-logo" />
+        <img src="./img/datail01png.png" alt="" class="prime-background" />
+      </div>
+      <div class="datailcarousel">
+        <div class="carousel-shipcard">
+          <img src="./img/boximg.png" alt="" class="shipcardimg" />
+          <div class="carousel-btn">
+            <span class="carousel-btn1">0</span>
+            <span class="carousel-btn2">0</span>
+            <span class="carousel-btn3">0</span>
+            <span class="carousel-btn4">0</span>
+          </div>
+        </div>
+        <div class="carousel-streamcard">
+          <img src="./img/notebookimg.png" alt="" class="streamcardimg" />
+          <div class="carousel-btn">
+            <span class="carousel-btn1">0</span>
+            <span class="carousel-btn2">0</span>
+            <span class="carousel-btn3">0</span>
+            <span class="carousel-btn4">0</span>
+          </div>
+        </div>
+        <div class="carousel-shopcard">
+          <img src="./img/bagimg.png" alt="" class="shopcardimg" />
+          <div class="carousel-btn">
+            <span class="carousel-btn1">0</span>
+            <span class="carousel-btn2">0</span>
+            <span class="carousel-btn3">0</span>
+            <span class="carousel-btn4">0</span>
+          </div>
+        </div>
+        <div class="carousel-readcard">
+          <img src="./img/tabletimg.png" alt="" class="readcardimg" />
+          <div class="carousel-btn">
+            <span class="carousel-btn1">0</span>
+            <span class="carousel-btn2">0</span>
+            <span class="carousel-btn3">0</span>
+            <span class="carousel-btn4">0</span>
+          </div>
+        </div>
+        <div class="carousel-morecard">
+          <img src="./img/sizagaimg.png" alt="" class="morecardimg" />
+          <div class="carousel-btn">
+            <span class="carousel-btn1">0</span>
+            <span class="carousel-btn2">0</span>
+            <span class="carousel-btn3">0</span>
+            <span class="carousel-btn4">0</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="./nav.js"></script>
+</body>
+
 </html>
