detail page markup 구현
carousel 부분 마크업 구현및 fastdetail 마크업 까지 구현

--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Amazon.com: Amazon Prime</title>
     <link rel="stylesheet" type="text/css" href="./CSS/main.css" />
-    <link rel="stylesheet" type="text/css" href="./CSS/nav.css" />
-    <link rel="stylesheet" type="text/css" href="./CSS/nav-planpage.css">
   </head>
   <body>
     <header class="navbar">
@@ -114,8 +112,8 @@
         </div>
       </div>
     </header>
-    <div class="planpage">
-      <div class="planpage-more-contents">
+    <div class="plan">
+      <div class="plan-more-contents">
         <div class="more-contents-wrap">
           <div class="more-contents-closebtn">CLOSE X</div>
           <img
@@ -132,91 +130,110 @@
           </div>
         </div>
       </div>
-      <div class="planpage-contents">
-        <div class="planpage-contents-logo">
+      <div class="plan-contents">
+        <div class="plan-contents-logo">
           <img
             src="./img/primeLogoBlue.png"
             alt="primeLogoBlue"
             class="primeblue"
           />
         </div>
-        <div class="planpage-contents-txt">
+        <div class="plan-contents-txt">
           See more plans
           <img src="./img/NavDownArrow.png" alt="DownArrow" class="downarrow" />
         </div>
-        <div class="planpage-contents-btn">
+        <div class="plan-contents-btn">
           <button class="contents-btn">TRY PRIME</button>
         </div>
       </div>
     </div>
     <div class="detailpage">
       <div class="prime-detailcontainer">
-        <div class="prime-text">
-          <p>
-            There's something for everyone with Prime! Check out what's included
-            with your Prime membership.
-          </p>
-          <div class="prime-btn">
-            <button>TRY PRIME</button> <button>prime monthly</button>
-            <button>prime annual</button>
+        <div class="prime-text-container">
+          <div class="prime-text">
+            <h1 class="prime-heading">
+              There's something for<br />
+              everyone with Prime!
+            </h1>
+            <p class="prime-heading-sub">
+              Check out what's included with your<br />
+              Prime membership.
+            </p>
+            <div class="prime-btn">
+              <button class="primebtn">TRY PRIME</button>
+              <button class="primebtn-month btnlist">prime monthly</button>
+              <button class="primebtn-annual btnlist">prime annual</button>
+            </div>
+            <p>
+              After your free trial Prime is just $12.99/month. <br />
+              Cancel anytime. See more plans
+            </p>
+            <img
+              src="./img/PrimeLogoWhite.png"
+              alt="PrimeLogoWhite"
+              class="prime-logo"
+            />
           </div>
-          <p>
-            After your free trial Prime is just $12.99/month. Cancel anytime.
-            See more plans
-          </p>
-          <img
-            src="./img/PrimeLogoWhite.png"
-            alt="PrimeLogoWhite"
-            class="prime-logo"
-          />
-          <img src="./img/datail01png.png" alt="" class="prime-background" />
         </div>
-        <div class="datailcarousel">
-          <div class="carousel-shipcard">
-            <img src="./img/boximg.png" alt="" class="shipcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
+        <div class="prime-carousel-container">
+          <div class="prime-carousel">
+            <div class="carousel shipcard">
+              <img src="./img/boximg.png" alt="" class="shipcardimg" />
+              <div class="carousel-btn">
+                <div class="carousel-btn-txt">Ship</div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+              </div>
+            </div>
+            <div class="carousel streamcard">
+              <img src="./img/notebookimg.png" alt="" class="streamcardimg" />
+              <div class="carousel-btn">
+                <div class="carousel-btn-txt">Stream</div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+              </div>
+            </div>
+            <div class="carousel shopcard">
+              <img src="./img/bagimg.png" alt="" class="shopcardimg" />
+              <div class="carousel-btn">
+                <div class="carousel-btn-txt">Shop</div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+              </div>
+            </div>
+            <div class="carousel readcard">
+              <img src="./img/tabletimg.png" alt="" class="readcardimg" />
+              <div class="carousel-btn">
+                <div class="carousel-btn-txt">Read</div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+              </div>
+            </div>
+            <div class="carousel morecard">
+              <img src="./img/sizagaimg.png" alt="" class="morecardimg" />
+              <div class="carousel-btn">
+                <div class="carousel-btn-txt">More</div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+                <div class="btn"></div>
+              </div>
             </div>
           </div>
-          <div class="carousel-streamcard">
-            <img src="./img/notebookimg.png" alt="" class="streamcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
+          <div class="carouselIntc">
+            <img src="./img/carousel.png" alt="" class="carouselimg"/>
           </div>
-          <div class="carousel-shopcard">
-            <img src="./img/bagimg.png" alt="" class="shopcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-readcard">
-            <img src="./img/tabletimg.png" alt="" class="readcardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
-          <div class="carousel-morecard">
-            <img src="./img/sizagaimg.png" alt="" class="morecardimg" />
-            <div class="carousel-btn">
-              <span class="carousel-btn1">0</span>
-              <span class="carousel-btn2">0</span>
-              <span class="carousel-btn3">0</span>
-              <span class="carousel-btn4">0</span>
-            </div>
-          </div>
+        </div>
+        <div class="fastdetail">
+          <img src="./img/fast.PNG" alt="" />
         </div>
       </div>
     </div>
