plan 페이지 마크업및 plancard header추가 plan 페이지 마크업구성 및 이미지 추가, flex로 plan card 배치 card 속 header 추가.

--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -116,12 +116,43 @@
     <div class="plan">
       <div class="plan-more-contents">
         <div class="more-contents-wrap">
-          <div class="more-contents-closebtn">CLOSE X</div>
-          <img
+          
+          <!-- <img
             src="./img/moreplan.png"
             alt="moreplanimg"
             class="more-contents-img"
-          />
+          /> -->
+          <div class="more-contents">
+            <div class="contents-top">
+              <div class="more-contents-closebtn">CLOSE X</div>
+              <div class="top-primeimg" >
+                <img src="./img/top.PNG" alt="topimg" class="contents-top-img">
+              </div>
+            </div>
+            <div class="contents-label-con">
+              <div class="label-wrap">
+                <label for="">
+                  <div class="plan-card-bg">
+                    <div class="plan-card-header">
+                      Prime Video
+                    </div>
+                    <div class="plan-card-price">
+                      <span class="plan-price-card-price-bold">
+                      $8 <sup>99</sup>
+                    </span>
+                    /month
+                    </div>
+                  </div>
+                </label>
+              </div >
+              <div class="label-wrap">
+                <label for="">prime monthly</label>
+              </div>
+              <div class="label-wrap">
+                <label for="">prime yearly</label>
+              </div>
+            </div>
+          </div>
           <div class="more-contents-arrow">
             <img
               src="./img/NavUpArrow.png"
