plan 배너 radio button 추가 및 기능 구현
radio button 클래스와 plan.js 추가를 통해 라디오 버튼 클릭시 배경색상 변경 기능 구현을 추가함.

--- a/amazoncopy/index.html
+++ b/amazoncopy/index.html
@@ -116,7 +116,6 @@
     <div class="plan">
       <div class="plan-more-contents">
         <div class="more-contents-wrap">
-          
           <!-- <img
             src="./img/moreplan.png"
             alt="moreplanimg"
@@ -125,31 +124,134 @@
           <div class="more-contents">
             <div class="contents-top">
               <div class="more-contents-closebtn">CLOSE X</div>
-              <div class="top-primeimg" >
-                <img src="./img/top.PNG" alt="topimg" class="contents-top-img">
+              <div class="top-primeimg">
+                <img
+                  src="./img/top.PNG"
+                  alt="topimg"
+                  class="contents-top-img"
+                />
               </div>
             </div>
             <div class="contents-label-con">
               <div class="label-wrap">
-                <label for="">
+                <label for="plan1">
+                  <input type="radio" name="plan-card" class="radio-button" id='plan1'/>
                   <div class="plan-card-bg">
                     <div class="plan-card-header">
                       Prime Video
                     </div>
+                    <div class="plan-card-button"></div>
                     <div class="plan-card-price">
                       <span class="plan-price-card-price-bold">
-                      $8 <sup>99</sup>
-                    </span>
-                    /month
+                        $8 <sup>99</sup>
+                      </span>
+                      /month
+                    </div>
+                    <div class="benefit-cont">
+                      <ul class="benefit-list">
+                        <li>
+                          <div class="benefit-check"></div>
+                          Prime Video
+                        </li>
+                        <li>FREE Two-Day shipping</li>
+                        <li>Unlimited music streaming</li>
+                        <li>Unlimited photo storage</li>
+                        <li>Unlimited reading</li>
+                        <li>FREE Same-Day Delivery</li>
+                      </ul>
                     </div>
                   </div>
                 </label>
-              </div >
-              <div class="label-wrap">
-                <label for="">prime monthly</label>
               </div>
               <div class="label-wrap">
-                <label for="">prime yearly</label>
+                <label for="plan2">
+                  <input type="radio" name="plan-card" class="radio-button" id='plan2'/>
+                  <div class="plan-card-bg">
+                    <div class="plan-card-header">
+                      Prime Video
+                    </div>
+                    <div class="plan-card-button"></div>
+                    <div class="plan-card-price">
+                      <span class="plan-price-card-price-bold">
+                        $8 <sup>99</sup>
+                      </span>
+                      /month
+                    </div>
+                    <div class="benefit-cont">
+                      <ul class="benefit-list">
+                        <li>
+                          <div class="benefit-check"></div>
+                          Prime Video
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          FREE Two-Day shipping
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited music streaming
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited photo storage
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited reading
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          FREE Same-Day Delivery
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </label>
+              </div>
+              <div class="label-wrap">
+                <label for="plan3"
+                  ><input type="radio" name="plan-card" class="radio-button" id='plan3' />
+                  <div class="plan-card-bg">
+                    <div class="plan-card-header">
+                      Prime Video
+                    </div>
+                    <div class="plan-card-button"></div>
+                    <div class="plan-card-price">
+                      <span class="plan-price-card-price-bold">
+                        $8 <sup>99</sup>
+                      </span>
+                      /month
+                    </div>
+                    <div class="benefit-cont">
+                      <ul class="benefit-list">
+                        <li>
+                          <div class="benefit-check"></div>
+                          Prime Video
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          FREE Two-Day shipping
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited music streaming
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited photo storage
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          Unlimited reading
+                        </li>
+                        <li>
+                          <div class="benefit-check"></div>
+                          FREE Same-Day Delivery
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </label>
               </div>
             </div>
           </div>
@@ -301,5 +403,6 @@
     </div>
     <script src="./JS/nav.js"></script>
     <script src="./JS/carousel.js"></script>
+    <script src="./JS/plan.js"></script>
   </body>
 </html>
